# CMakeLists.txt
# By Sebastian Raaphorst, 2018.

project(gensudoku VERSION 0.1.0 LANGUAGES CXX)

#add_library(gensudoku SHARED
#        ConstMath.h
#        DefaultMethods.h
#        GenSudokuBoard.h
#        GenSudokuBoardGAPopulator.h
#        GenSudokuBoardAscenderPopulator.h
#        GenSudokuBoardPopulator.h
#        PredefinedBoards.h
#        )